[ADD] Comment Controller & Fixes
-reviews and subjects controller + path fixed for versatile using
-Comment Controller Added
-Docs updated to the latest changes
